Tests/CompilerTests/negative/no-given.hylo
trait P {}
trait Q {}

struct A {}
struct B {}

fun f<where A: Q>() {}

fun g() {
  given B: P {}
  given <where A: P> A: Q {}
  f()
}

fun h() {
  given <T where T: P> T: Q {}
  f()
}

fun i<T where T: P>(x: T) {
  i(x: ())
}
